# template-fastapi-react

./: .env-template  .gitattributes  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  404.html  CHANGELOG.md  CONTRIBUTING.md  Changelog.html  DEVELOPMENT.md  LICENSE.md  README.md  RUNBOOK.md  SECURITY.md  biome.json  copier.yml  docker-compose.ci.yml  docker-compose.override.yml  docker-compose.yml  doctave.yaml  generate-api-typescript-client.sh  index.html  mise.toml  pyproject.toml  radixconfig.yaml  release-notes.md  release-please-config.json  search.json  search_index.json  sitemap.xml
.github/: CODEOWNERS  (+7 more)
api/: .dockerignore  .flake8  .openapi.json  .pre-commit-config.yaml  Dockerfile  pyproject.toml
api/src/: app.py  config.py  init.sh  pytest.ini
api/src/app/: __init__.py  __main__.py  app.py  config.py
api/src/app/authentication/: __init__.py  access_control.py  authentication.py  models.py
api/src/app/common/: __init__.py  exception_handlers.py  exceptions.py  logger.py  middleware.py  responses.py  telemetry.py
api/src/app/data_providers/clients/: __init__.py  client_interface.py
api/src/app/data_providers/clients/mongodb/: __init__.py  mongo_database_client.py
api/src/app/features/health_check/: __init__.py  health_check_feature.py
api/src/app/features/todo/: __init__.py  todo_feature.py
api/src/app/features/todo/entities/: __init__.py  todo_item.py
api/src/app/features/todo/repository/: __init__.py  todo_repository.py  todo_repository_interface.py
api/src/app/features/todo/use_cases/: __init__.py  add_todo.py  delete_todo_by_id.py  get_todo_all.py  get_todo_by_id.py  update_todo.py
api/src/app/features/whoami/: __init__.py  whoami_feature.py
api/src/authentication/: access_control.py  authentication.py  mock_token_generator.py  models.py
api/src/common/: entity_mapper.py  exception_handlers.py  exceptions.py  logger.py  logger_level.py  middleware.py  responses.py  use_case.py  use_case_executor.py
api/src/common/utils/: encryption.py  logger.py
api/src/controllers/: hello_world.py
api/src/data_providers/: get_repository.py
api/src/data_providers/clients/: ClientInterface.py  client_interface.py
api/src/data_providers/clients/mongodb/: MongoDatabaseClient.py  mongo_database_client.py
api/src/data_providers/repositories/: TodoRepository.py  todo_repository.py
api/src/data_providers/repository_interfaces/: TodoRepositoryInterface.py  todo_repository_interface.py
api/src/entities/: TodoItem.py
api/src/features/health_check/: health_check_feature.py
api/src/features/personal_access_token/: personal_access_token_feature.py
api/src/features/personal_access_token/interfaces/: PersonalAccessTokenRepositoryInterface.py
api/src/features/personal_access_token/use_cases/: create_pat.py  delete_pat_by_token_id_and_user.py  get_pat_by_user.py
api/src/features/todo/: exceptions.py  shared_models.py  todo_feature.py
api/src/features/todo/entities/: todo_item.py
api/src/features/todo/interfaces/: TodoRepositoryInterface.py
api/src/features/todo/repository/: TodoRepository.py  TodoRepositoryInterface.py  todo_repository.py  todo_repository_interface.py
api/src/features/todo/use_cases/: add_todo.py  delete_todo_by_id.py  get_todo_all.py  get_todo_by_id.py  update_todo.py
api/src/features/whoami/: whoami_feature.py
api/src/infrastructure/: get_repository.py
api/src/infrastructure/clients/: ClientInterface.py
api/src/infrastructure/clients/mongodb/: MongoClient.py  MongoDatabaseClient.py
api/src/infrastructure/repositories/: PersonalAccessTokenRepository.py  TodoRepository.py
api/src/tests/: conftest.py  test_hello_world.py  test_schemathesis.py
api/src/tests/integration/: mock_authentication.py  mongodb_fixtures.py
api/src/tests/integration/common/: test_exception_handler.py
api/src/tests/integration/features/healt_check/: test_health_check_feature.py
api/src/tests/integration/features/health_check/: test_health_check_feature.py
api/src/tests/integration/features/personal_access_token/: test_personal_access_token_feature.py
api/src/tests/integration/features/todo/: test_todo_feature.py
api/src/tests/integration/features/whoami/: test_whoami_feature.py
api/src/tests/unit/common/: test_entity_mapper.py  test_exception_handler_integration.py
api/src/tests/unit/data_providers/clients/mongodb/: test_MongoDatabaseClient.py  test_mongo_database_client.py
api/src/tests/unit/data_providers/repositories/: test_TodoRepository.py  test_todo_repository.py
api/src/tests/unit/entities/: test_todo_item.py
api/src/tests/unit/features/todo/: conftest.py
api/src/tests/unit/infrastructure/repositories/: test_TodoRepository.py
api/src/{{api_module_name}}/: __init__.py.jinja  __main__.py  app.py  config.py
api/src/{{api_module_name}}/authentication/: access_control.py.jinja  authentication.py  models.py
api/src/{{api_module_name}}/common/: exception_handlers.py  exceptions.py  middleware.py  responses.py
api/src/{{api_module_name}}/data_providers/clients/mongodb/: mongo_database_client.py
api/src/{{api_module_name}}/features/health_check/: health_check_feature.py.jinja
api/src/{{api_module_name}}/features/todo/: todo_feature.py
api/src/{{api_module_name}}/features/todo/repository/: todo_repository.py
api/src/{{api_module_name}}/features/todo/use_cases/: add_todo.py  delete_todo_by_id.py  get_todo_all.py  get_todo_by_id.py  update_todo.py
api/src/{{api_module_name}}/features/whoami/: whoami_feature.py
api/tests/: conftest.py
api/tests/integration/: mock_authentication.py
api/tests/integration/common/: test_exception_handler.py
api/tests/integration/features/health_check/: test_health_check_feature.py
api/tests/integration/features/todo/: test_todo_feature.py
api/tests/integration/features/whoami/: test_whoami_feature.py
api/tests/unit/features/todo/: conftest.py
api/tests/unit/features/todo/repository/: test_todo_repository.py
api/tests/unit/features/todo/use_cases/: test_add_todo.py  test_delete_todo_by_id.py  test_get_todo_by_id.py  test_update_todo.py
(+594 files in other folders)
