[project]
name = "app"
version = "1.4.0"
description = "API for Template Fastapi React"
requires-python = ">=3.14"
readme = "../README.md"
dependencies = [
  "azure-monitor-opentelemetry>=1.6.5",
  "cachetools>=7.1.1",
  "fastapi[standard]>=0.136.1",
  "httpx>=0.28",
  "opentelemetry-instrumentation-fastapi>=0.62b1",
  "pydantic>=2.13.3",
  "pydantic-settings>=2.14.0",
  "pyjwt>=2.8.0",
  "pymongo>=4.17.0",
]

[dependency-groups]
dev = [
  "mongomock>=4.1.2",
  "mypy>=1.20.2",
  "pytest>=8.3.0",
  "ruff>=0.15.12",
  "types-cachetools>=7.0.0.20260503",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
exclude = ["/tests/"]
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
disallow_subclassing_any = false

[tool.ruff]
src = ["src"]
target-version = "py314"
line-length = 119

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "S",  # flake8-bandit
  "C",  # flake8-comprehensions
  "B",  # flake8-bugbear
  "UP", # automatically upgrade syntax for newer versions of the language
]
ignore = [
  "B904", # TODO: Within an except clause, raise exceptions with `raise ... from err` or `raise ... from None` to distinguish them from errors in exception handling
  "B008", # do not perform function calls in argument defaults. Ignored to allow dependencies in FastAPI
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
  "E402",
] # Ignore `E402` (import violations) in all `__init__.py` files
"tests/*" = ["S101"] # Allow the use of ´assert´ in tests

[tool.pytest.ini_options]
# Makes pytest CLI discover markers and conftest settings:
markers = [
  "unit: mark a test as unit test.",
  "integration: mark a test as integration test.",
]
testpaths = ["tests/unit", "tests/integration"]
pythonpath = ["src"]
